[package]
name = "float-ord"
version = "0.3.2"
authors = ["Michael Howell <michael@notriddle.com>"]
description = "A total ordering for floating-point numbers"
keywords = ["floats", "sort", "compare"]
categories = ["algorithms", "no-std"]
license = "MIT / Apache-2.0"
repository = "https://github.com/notriddle/rust-float-ord"
documentation = "https://docs.rs/float-ord/0.3.1/float-ord/"

[features]
bytemuck = ["dep:bytemuck"]

[dev-dependencies]
rand = "0.8"
bytemuck = { version = "1.12.3", features = ["derive", "extern_crate_std", "min_const_generics"] }

[badges]
travis-ci = { repository = "notriddle/rust-float-ord" }

[dependencies.bytemuck]
optional = true
version = "1.12.3"
default-features = false
features = ["derive"]
